--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <h2>Work</h2>
        </aside>
        <main>
-        <p>My current work includes the projects done during class in the UC Berkeley extension - Coding Boot Camp.
-        </p>
+        <img src="./assets/images/hero-bg.jpeg" alt="runner image" class="float-right"/>
+        <p>My current work includes the projects done during class in the UC Berkeley extension - Coding Boot Camp</p>
     </main>
 
     
