updated contact info email

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <main>
             <p>I have 20 years work-experience in the finance field. Coding started as a hobby which
                 I now love and hope to get more knowledge and working experience.
+            </br>
+
+            I currently have a full time job but I would like to start working part time in coding. 
+            I can work remotely and flexible on weekends or evening shifts</br>
             </p>
-
-            <p> I currently have a full time job but I would like to start working part time in coding. 
-                I can work remotely and flexible on weekends or evening shifts</p>
-
         </main>
     
         </section>
@@ -54,12 +54,14 @@
             <h2>Contact</h2>
         </aside>
         <main>
-            <p>linkedin, 
-                phone#, 
-                email</p>
+            <address>
+                Mobile: 404.123.4567 </br> 
+                <a href="mailto:wendyrod58@hotmail.com">wendyrod58@hotmail.com</a> </br>
+            </address>
         </main>        
 
     </section>
+
     
     <footer class="footer">
         <h3>Made with ❤️️ by Wendy</h3>
