--- a/index.html
+++ b/index.html
@@ -45,18 +45,15 @@
         <aside id="Work">
             <h2>Work</h2>
        </aside>
-               <img src="./assets/images/hero-bg.jpeg" alt="runner image" class="run-buddy"/>
        
-            <a href="https://wendyrod58.github.io/refactor-homework1/">
-               <img src="./assets/images/digital-marketing-meeting.jpg" alt="team meeting" class="refactor"/>
-            </a>
+       <a href="https://wendyrod58.github.io/run-buddy/">        
+       <img src="./assets/images/hero-bg.jpeg" alt="runner image" class="run-buddy"/>
+       </a>
+        
+       <a href="https://wendyrod58.github.io/refactor-homework1/">
+       <img src="./assets/images/digital-marketing-meeting.jpg" alt="team meeting" class="refactor"/>
+       </a>
     </section>
-
-<!-- 
-    <a href="https://www.qries.com/">
-        <img alt="Qries" src="https://www.qries.com/images/banner_logo.png"
-        width=150" height="70">
-     </a> -->
 
     <section>
         <aside id="Contact">
