moving images to a div

--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
         <aside id="Work">
             <h2>Work</h2>
        </aside>
-       
+       <main>
+        <p>My portfolio includes two main projects completed during coding boot-camp. </br>
+        The first one, run-buddy, is an ongoing project that is completed as the class covers different topics. </br>
+        The second one, Horeseon, is a refactor project to correct mistakes in a given code.
+        </br>
+        </p>
+    </main>
+    </section>
+
+    <div>
        <a href="https://wendyrod58.github.io/run-buddy/">        
        <img src="./assets/images/hero-bg.jpeg" alt="runner image" class="run-buddy"/>
        </a>
@@ -53,8 +62,8 @@
        <a href="https://wendyrod58.github.io/refactor-homework1/">
        <img src="./assets/images/digital-marketing-meeting.jpg" alt="team meeting" class="refactor"/>
        </a>
-    </section>
-
+    </div>   
+    
     <section>
         <aside id="Contact">
             <h2>Contact</h2>
